--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,7 +30,10 @@
 			
 		}
 		
-	 }
+	},
+	"features": {
+		"ghcr.io/devcontainers-contrib/features/live-server:1": {}
+	}
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
